# abook-osso-abook-home-applet

./: Makefile.am  configure.ac
debian/: changelog  control  osso-abook-home-applet.launcher  rules
src/: Makefile.am  main.c  osso-abook-home-applet.c  osso-abook-home-applet.h
